--- a/resources/views/dashboard.twig
+++ b/resources/views/dashboard.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
+    <h1>Dashboard</h1>
 {% endblock %}
