--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>no framework</title>
+    <title>{% if  block('title') is defined %} {{ block('title') }} | {% endif %} No framework</title>
 </head>
 <body>
     <nav>
