--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -4,4 +4,10 @@
 
 {% block content %}
     <h1>Home</h1>
+
+    <div>
+        {% for user in users %}
+            <div>{{ user.name }}</div>
+        {% endfor %}
+    </div>
 {% endblock %}
