--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -7,7 +7,7 @@
 
     <div>
         {% for user in users %}
-            <div><a href="/users/{{ user.id }}">{{ user.name }}</a></div>
+            <div><a href="/users/{{ user.id }}">{{ user.first_name }}</a></div>
         {% endfor %}
     </div>
 {% endblock %}
