--- a/resources/views/layouts/partials/navigation.twig
+++ b/resources/views/layouts/partials/navigation.twig
@@ -5,4 +5,7 @@
     <li>
         <a href="/dashboard">Dashboard</a>
     </li>
+    <li>
+        <a href="/register">Register</a>
+    </li>
 </ul>
