--- a/resources/views/layouts/partials/navigation.twig
+++ b/resources/views/layouts/partials/navigation.twig
@@ -2,10 +2,18 @@
     <li>
         <a href="/">Home</a>
     </li>
-    <li>
-        <a href="/dashboard">Dashboard</a>
-    </li>
-    <li>
-        <a href="/register">Register</a>
-    </li>
+    {% if auth().check() %}
+        <li>
+            <a href="/dashboard">Dashboard</a>
+        </li>
+        <li>
+            {{ auth().user().first_name }}
+        </li>
+    {% endif %}
+    {% if not auth().check() %}
+        <li>
+            <a href="/register">Register</a>
+        </li>
+    {% endif %}
+
 </ul>
