--- a/resources/views/layouts/partials/navigation.twig
+++ b/resources/views/layouts/partials/navigation.twig
@@ -14,6 +14,9 @@
         <li>
             <a href="/register">Register</a>
         </li>
+        <li>
+            <a href="/login">Login</a>
+        </li>
     {% endif %}
 
 </ul>
