--- a/resources/views/layouts/partials/navigation.twig
+++ b/resources/views/layouts/partials/navigation.twig
@@ -9,6 +9,11 @@
         <li>
             {{ auth().user().first_name }}
         </li>
+        <li>
+            <form action="/logout" method="post">
+                <button type="submit">Log out</button>
+            </form>
+        </li>
     {% endif %}
     {% if not auth().check() %}
         <li>
