--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -10,18 +10,30 @@
     <div>
         <label for="first_name">First Name</label>
         <input type="text" name="first_name" id="first_name">
+        {% if errors.first_name %}
+            <div style="color: red;">{{ errors.first_name }}</div>
+        {% endif %}
     </div>
     <div>
         <label for="last_name">Last Name</label>
         <input type="text" name="last_name" id="last_name">
+        {% if errors.last_name %}
+            <div style="color: red;">{{ errors.last_name }}</div>
+        {% endif %}
     </div>
     <div>
         <label for="email">Email</label>
         <input type="text" name="email" id="email">
+        {% if errors.email %}
+            <div style="color: red;">{{ errors.email }}</div>
+        {% endif %}
     </div>
     <div>
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
+        {% if errors.password %}
+            <div style="color: red;">{{ errors.password }}</div>
+        {% endif %}
     </div>
     <button type="submit">Save</button>
 </form>
