--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -9,21 +9,21 @@
     {{ csrf() | raw }}
     <div>
         <label for="first_name">First Name</label>
-        <input type="text" name="first_name" id="first_name">
+        <input type="text" name="first_name" id="first_name" value="{{ old('first_name') }}">
         {% if errors.first_name %}
             <div style="color: red;">{{ errors.first_name }}</div>
         {% endif %}
     </div>
     <div>
         <label for="last_name">Last Name</label>
-        <input type="text" name="last_name" id="last_name">
+        <input type="text" name="last_name" id="last_name" value="{{ old('last_name') }}">
         {% if errors.last_name %}
             <div style="color: red;">{{ errors.last_name }}</div>
         {% endif %}
     </div>
     <div>
         <label for="email">Email</label>
-        <input type="text" name="email" id="email">
+        <input type="text" name="email" id="email" value="{{ old('email') }}">
         {% if errors.email %}
             <div style="color: red;">{{ errors.email }}</div>
         {% endif %}
