adding a pagination and the links of it and default tempelete

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -5,8 +5,15 @@
 {% block content %}
     <h1>Home</h1>
     <div>
-        {% for user in users %}
-            <div><a href="/users/{{ user.id }}">{{ user.first_name }}</a></div>
-        {% endfor %}
+		{% if users is not empty %}
+			{% for user in users %}
+                <div>
+                    <a href="/users/{{ user.id }}">{{ user.first_name }}</a>
+				</div>
+			{% endfor %}
+
+			{{ users.links() | raw }}
+		{% endif %}
     </div>
 {% endblock %}
+
