adding some global helpers in the application

--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Login</h1>
 
-<form action="/login" method="post">
+<form action="{{ route('login') }}" method="post">
     {{ csrf() | raw }}
     <div>
         <label for="email">Email</label>
