--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Register</h1>
 
-<form action="/register" method="post">
+<form action="{{ route('register') }}" method="post">
     {{ csrf() | raw }}
     <div>
         <label for="first_name">First Name</label>
