--- a/resources/views/user.twig
+++ b/resources/views/user.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
-{% block title %}{{ user.name }}{% endblock %}
+{% block title %}{{ user.first_name }}{% endblock %}
 
 {% block content %}
-    <h1>{{ user.name }}</h1>
+    <h1>{{ user.first_name }}</h1>
 {% endblock %}
